--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <form action="./cleaned-text.php" method="post">
           <div class="row align-items-center gap-5">
             <div class="col d-flex flex-column">
-              <label for="textArea">Paste your <em>dirty</em> text here!</label>
-              <textarea name="textArea" id="textArea" cols="30" rows="10"></textarea>
+              <label for="dirtyText">Paste your <em>dirty</em> text here!</label>
+              <textarea name="dirtyText" id="dirtyText" cols="30" rows="10"></textarea>
             </div>
             <div class="col-4 d-flex flex-column justify-content-between">
               <label for="dirtyWord">Insert the <em>dirty</em> word here!</label>
