--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     </div>
   </header>
   <main>
-    <div class="container my-5 text-center">
-      <h3>Clean out your texts by choosing the word you wanna substitute and press enter, we will do the job for you!</h3>
+    <div class="container my-3 text-center">
+      <h3>Clean out your texts by choosing the word you wanna hide and press enter, we will do the job for you!</h3>
       <div class="ms-wrapper my-5">
         <form action="./cleaned-text.php" method="post">
           <div class="row align-items-center gap-5">
@@ -44,6 +44,14 @@
       </div>
     </div>
   </main>
-  <footer></footer>
+  <footer>
+    <div class="container-fluid py-3 text-center">
+      <p>
+        &copy;
+        <a class="link mx-1" href="https://github.com/mcspe">@mcspe</a>
+        <span>All Rights Reserved</span>
+      </p>
+    </div>
+  </footer>
 </body>
 </html>
